# data-mc-alignment

./: Makefile  README.md  pyproject.toml
data_mc_alignment/: __init__.py
docs/: mkdocs.yml
docs/docs/: index.md
src/: dataset.py  features.py  plots.py
src/modeling/: predict.py  train.py
