[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "data_mc_alignment"
version = "0.0.1"
description = "To evaluate whether ssl can improve data-mc alignment"
authors = [
  { name = "Zihan Zhao" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["data_mc_alignment"]
force_sort_within_sections = true
